--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,46 @@
-.App {
+.nav{
+  height: 10vh;
   text-align: center;
+  background-color: rgb(116, 180, 124);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.navItem{
+  margin-top: 5px;
+  padding: 20px 20px;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 10px;
+  color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.navItem:hover{
+  background-color: rgb(71, 134, 79);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1{
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pointActions{
+  margin-top: 20px;
+  text-align: center;
+}
+
+.heatActions{
+  margin-top: 20px;
+  text-align: center;
+}
+
+button{
+  padding: 10px 20px;
+  border-radius: 10px;
+  background-color: rgb(116, 180, 124);
+  color: black;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: rgb(71, 134, 79);
+  color: white;
 }
