--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   background-color: rgb(116, 180, 124);
 }
 
+html{
+  background-color: rgba(116, 180, 124, 0.233)
+}
+
 .navItem{
   margin-top: 5px;
   padding: 20px 20px;
